--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-	"printWidth": 120,
-	"singleQuote": true,
-	"semi": true,
-	"useTabs": true
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "printWidth": 160
 }
