--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-compatibility_date = "2023-10-16"
+compatibility_date = "2025-04-03"
 main = "src/index.ts"
 name = "r2-webdav"
 
@@ -6,9 +6,9 @@ compatibility_flags = ["nodejs_compat"]
 
 # Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.
 # Docs: https://developers.cloudflare.com/r2/api/workers/workers-api-usage/
-[[r2_buckets]]
-binding = "bucket" # <~ valid JavaScript variable name
-bucket_name = "r2-webdav"
+r2_buckets = [
+  { binding = "bucket", bucket_name = "dev-public", preview_bucket_name = "Storage Bucket (Public)" },
+]
 
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/#enable-workers-logs
 [observability]
